[package]
name = "lidoom"
version = "1.1.2"
description = "DOOM port for Project Lighthouse"
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/fwcd/lidoom"

[features]
default = []
gui = ["dep:sdl2"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive", "env"] }
doomgeneric = "0.3.0-beta.3"
dotenvy = "0.15.7"
futures = "0.3.31"
lighthouse-client = "6.2.0"
sdl2 = { version = "0.37.0", optional = true }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
